test_regress/t/t_randc_oversize_bad.out
%Warning-RANDC: t/t_randc_oversize_bad.v:8:21: Unsupported: Converting 'randc' to 'rand'
    8 |    randc bit [33:0] i;
      |                     ^
                ... For warning description see https://verilator.org/warn/RANDC?v=latest
                ... Use "/* verilator lint_off RANDC */" and lint_on around source to disable this message.
%Error: Exiting due to
